# tiny-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: .env.example  Makefile  config.yaml  extensions_config.json  pyproject.toml
backend/app/gateway/: app.py
backend/core/compaction/: __init__.py  async_runner.py
backend/core/executor/: pool.py  runner.py  task.py
backend/core/graph/: builder.py  state.py
backend/core/memory/: engine.py  extractor.py  injector.py  merger.py  scorer.py  storage.py
backend/core/middleware/: __init__.py  base.py  context_compaction.py  loop_detection.py  todo.py
backend/core/models/: factory.py  providers.py
backend/core/skills/: executor.py  registry.py  router.py  types.py
backend/core/tools/: run_skill.py  web_search.py
backend/skills/chart-visualization/: SKILL.md
backend/skills/code-review/: SKILL.md
backend/skills/deep-research/: SKILL.md
backend/skills/frontend-design/: SKILL.md
backend/skills/summarize/: SKILL.md
backend/tests/: conftest.py  test_4way_router.py  test_api_threads.py  test_browser_e2e.py  test_config.py  test_e2e.py  test_executor.py  test_four_modes_integration.py  test_graph.py  test_graph_nodes.py  test_loop_context_mw.py  test_memory.py  test_middleware.py  test_model_factory.py  test_pulse_e2e.py  test_react_agent.py  test_skill_router.py  test_sse_events.py  test_state_transitions.py  test_todo_middleware.py
backend/tests/evals/: README.md  conftest.py  test_compaction_evals.py  test_e2e_compaction.py  (+1 more)
(+79 files in other folders)
